# yub-adam-theory

./: .env.example  .gitignore  CLAUDE.md  README.md  adam_theory_pipeline.ipynb  main.py  pyproject.toml
.github/workflows/: daily_update.yml
backtesting/: engine.py  metrics.py  report.py
config/: CLAUDE.md  schema.py  settings.py
data/: CLAUDE.md  consolidated_store.py  fetcher.py  filters.py  pipeline.py  store.py  symbols.py  trading_calendar.py
data/sources/: CLAUDE.md  __init__.py  akshare_source.py  baostock_source.py  base.py  ef_source.py  parallel.py  strategy.py  tx_source.py
indicators/: CLAUDE.md  __init__.py  adams_theory.py  market_regime.py  risk_metrics.py
notification/: CLAUDE.md  __init__.py  base.py  feishu.py  wecom.py
pipeline/: CLAUDE.md  __init__.py  daily_pipeline.py
recommendation/: CLAUDE.md  explainer.py  pipeline.py  ranking.py
reporting/: CLAUDE.md  console.py  html_report.py
reporting/templates/: report.html
scripts/: CLAUDE.md  check_coverage.py  cron_daily.sh  daily_update.py  fix_june12.py  init_backfill.py  notify_feishu.py  patch_dates.py  patch_missing_data.py  patch_v2.py  run_backtest.py  run_daily.bat  run_daily.ps1
signals/: CLAUDE.md  detector.py  filters.py  scorer.py
tests/: CLAUDE.md  conftest.py  test_adams_theory.py  test_detector.py  test_filters.py  test_notification.py  test_ranking.py  test_scorer.py  test_sources.py  test_store.py
utils/: decorators.py  logger.py  timer.py
